[tool.poetry]
name = "credml"
version = "0.1.0"
description = ""
authors = ["Vencel <csvencel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flakeheaven = "^3.3.0"
black = "^24.10.0"
mypy = "^1.14.1"
ipykernel = "^6.29.5"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
